@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-13T01:14:11Z",
-  "count_outdated" : 550,
-  "uniques_outdated" : 376,
-  "count" : 556,
-  "uniques" : 382,
+  "timestamp" : "2025-07-16T01:08:55Z",
+  "count_outdated" : 552,
+  "uniques_outdated" : 378,
+  "count" : 557,
+  "uniques" : 383,
   "clones" : [
-    {
-      "timestamp": "2025-07-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-07-03T00:00:00Z",
       "count": 1,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2025-07-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
