@@ -1,12 +1,7 @@
 {
-  "count": 6,
-  "uniques": 6,
+  "count": 5,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-07-01T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-07-03T00:00:00Z",
       "count": 1,
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2025-07-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
